--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mariadb conn">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/mariadb conn">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
